# cpc-gpio-expander

./: LICENSE  README.md
bridge/: Cargo.toml  README.md
bridge/src/: main.rs  utils.rs
bridge/src/driver/: mod.rs
bridge/src/driver/packet/: mod.rs
bridge/src/endpoint/: mod.rs
bridge/src/endpoint/packet/: mod.rs
bridge/src/gpio/: mod.rs
bridge/src/gpio/interface/: cpc.rs  mock.rs  mod.rs
bridge/src/gpio/packet/: mod.rs
bridge/src/router/: adapter.rs  mod.rs
driver/: Kbuild  Makefile  README.md  cpc-gpio.c
secondary/: README.md
