[package]
name = "cpc-gpio-bridge"
version = "1.0.1"
edition = "2021"
description = "Provides the ability to expose general purpose I/O's from a microcontroller to the Linux GPIO subsystem"
repository = "https://github.com/SiliconLabs/cpc-gpio-expander"
keywords = ["gpio", "cpc", "siliconlabs"]
license-file = "LICENSE"

[features]
default = ["gpio_cpc"]
gpio_cpc = ["dep:libcpc"]
gpio_mock = []

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.4.1", features = ["derive"] }
env_logger = "0.10.0"
file-lock = "2.1.10"
libcpc = { git = "https://github.com/SiliconLabs/cpc-daemon.git", tag = "v4.3.0", optional = true }
log = "0.4.20"
mio = "0.8.8"
mio-signals = "0.2.0"
neli = "0.6.4"
nom = "7.1.3"
num_enum = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_repr = "0.1.16"
thiserror = "1.0.47"

[dev-dependencies]
gpiod = "0.2.3"
liblmod = "0.2.0"
serial_test = "2.0.0"
telnet = "0.2.1"
toml = "0.7.6"

[[test]]
name = "mock-tests"
harness = false
